feat: update typescript generator

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Testing</title>
+  <meta name="description" content="Online web dev tools for web development." />
+  <title>The Dev Tools</title>
+  <style>
+    ul, li {
+      list-style: none;
+      padding: 0;
+    }
+  </style>
 </head>
 <body>
-  <div>Coming soon.</div>
+  <h1>The Dev Tools</h1>
+  <ul>
+    <li>
+      <h2>
+        <a href="/typescript-generator/">TypeScript Generator</a>
+      </h2>
+      <p>A devtool to generate TypeScript code from the response body JSON of RESTful APIs automatically.</p>
+    </li>
+  </ul>
 </body>
 </html>
